# github-actions-tests

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-osx.yml  build-windows.yml  ccpp.yml  ci-experiment.yml  ci-simple.yml  ci.yml  cmake-build-matrix.yml  cmake.yml  cmake_old.yml
artifacts/: README.md
cmake_filesystem/: CMakeFilesystemConfig.h.in  CMakeLists.txt  main.cpp
cmake_filesystem/external_libs/: CMakeLists.txt
cmake_filesystem/files/: file1.txt  file2.txt
cmake_filesystem/src/: FileManager.cpp  FileManager.h
cmake_filesystem/tests/: CMakeLists.txt  main_tests.cpp
cmake_filesystem_tests/: CMakeLists.txt  main_tests.cpp
external_libs/: catch.hpp
files/: file3.txt
modules/: CPM.cmake  Catch.cmake  CatchAddTests.cmake
